--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Webpack App</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <h1 class="myclass">Hello world!</h1>
         <h2>Tip: Check your console</h2>
     </body>
 </html>
