Update gradient, add classes to weather info

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
                 <div class="weather-info-header flex flex-col justify-center items-center mt-16">
                     <p class="place text-xl mb-2"> São Paulo, BR</p>
                     <p class="temp font-bold text-7xl mb-4"> 22º C</p>
-                    <p class="icon mb-5"><i class="fa fa-cloud fa-6x" aria-hidden="true"></i></p>
+                    <p class="icon mb-5"></p>
                     <p class="details text-xl font-bold tracking-widest"> Céu limpo</p>
                 </div>
                 <div class="weather-info-additional mt-12 flex flex-col ">
                     <div class="today border-solid border-white border-2 w-auto rounded-md p-4 mb-8">
-                        <p>Wind: something</p>
-                        <p>humidity: something</p>
-                        <p>Pressure: something</p>
+                        <p class="wind">Wind: something</p>
+                        <p class="humidity">humidity: something</p>
+                        <p class="pressure">Pressure: something</p>
                     </div>
                     <div class="next-days flex justify-between my-4">
                         <div class="next-day flex flex-col items-center">
