Add temporary toggle switch

--- a/index.html
+++ b/index.html
@@ -21,6 +21,25 @@
             </form>
 
             <div class="weather-info w-80">
+
+                <div>
+                    <label for="toogleButton" class="flex items-center cursor-pointer">
+                        <div class="px-2">Toggle me</div>
+    
+                    <div class="relative">
+                        <input id="toogleButton" type="checkbox" class="hidden" />
+                        <!-- path -->
+                        <div
+                          class="toggle-path bg-gray-200 w-9 h-5 rounded-full shadow-inner"
+                        ></div>
+                        <!-- crcle -->
+                        <div
+                          class="toggle-circle absolute w-3.5 h-3.5 bg-white rounded-full shadow inset-y-0 left-0"
+                        ></div>
+                      </div>
+                </div>
+
+
                 <div class="weather-info-header flex flex-col justify-center items-center mt-16">
                     <p class="place text-xl mb-2"> São Paulo, BR</p>
                     <p class="temp font-bold text-7xl mb-4"> 22º C</p>
@@ -34,9 +53,19 @@
                         <p class="pressure">Pressure: something</p>
                     </div>
                     <div class="next-days flex justify-between my-4">
-                        <div class="next-day flex flex-col items-center">
+                        <div class="tomorrow flex flex-col items-center">
                             <p>Tomorrow</p>
-                            <p><i class="fas fa-cloud-sun-rain fa-2x"></i></p>
+                            <p></p>
+                            <p>14ºC - 25ºC</p>
+                        </div>
+                        <div class="nextday1 flex flex-col items-center">
+                            <p>Tomorrow</p>
+                            <p></p>
+                            <p>14ºC - 25ºC</p>
+                        </div>
+                        <div class="nextday2 flex flex-col items-center">
+                            <p>Tomorrow</p>
+                            <p></p>
                             <p>14ºC - 25ºC</p>
                         </div>
                     </div>
