Fix issue with mobile display, update PurgeCSS path

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/9fcaa489dc.js" crossorigin="anonymous"></script>
         <title>Webpack App</title>
     </head>
-    <body>
+    <body class="h-screen">
         <div id="content">
             <div class="day-info text-4xl">
                 <h2 class="date-info">Weather App</h2>
