--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/9fcaa489dc.js" crossorigin="anonymous"></script>
-        <title>Webpack App</title>
+        <title>Weather App</title>
     </head>
     <body class="h-screen">
         <div id="content">
