Fix reload bug on Enter key press

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <h4 class="time"></h4>
             </div>
 
-            <form action="#" class="flex flex-col justify-start items-center mt-16">
+            <div class="flex flex-col justify-start items-center mt-16">
                 <label for="search" class="self-start m-2">Enter a city</label>
                 <div>
                     <input id="search" class="rounded p-1 px-2 bg-info text-white" type="text">
-                    <button class="btn">submit</button>
+                    <button type="button" class="btn">submit</button>
                 </div>
-            </form>
+            </div>
 
             <div class="weather-info w-80">
                 <div class="weather-info-header flex flex-col justify-center items-center mt-12">
